generator/testdata/rpc/errors/bad-return-args/greeter.remoto.go
package testdata

type Greeter interface {
	Greet(GreetRequest) string
}

type GreetRequest struct {
	Name string
}

type GreetResponse struct {
	Greeting string
}
